2005-10-27  Sebastien Pouliot  <sebastien@ximian.com>

	* Mono.Cecil\SecurityDeclaration.cs
		Copy the permission set when cloning.
	* Mono.Cecil\SecurityDeclarationCollection.cs
		Ajusted to use an Hashtable, to Union permission sets on
		the same action and to set/unset HasSecurity when needed.
	* Mono.Cecil\ModuleDefinition.cs:
		Added TODO (remainder) for complete 2.0 format support.
	* Mono.Cecil\ReflectionWriter.cs:
		Move MetadataToken finding outside the loop.
	* Mono.Cecil\ISecurityDeclarationCollection.cs:
		Adjust interface.

2005-10-27  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/MethodDefinition.cs:
		Add generics parameters in visitor path.

	* Mono.Cecil/GenericParamAttributes.cs:
		Add new constraints flags.

2005-10-22  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/GenericParameter.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/IGenericParameter.cs
	  Mono.Cecil/AggressiveReflectionReader.cs
	  Mono.Cecil/GenericContext.cs:
		Support generic parameters constraints.

2005-10-21  Jb Evain  <jbevain@gmail.com>

	* Mono.Cecil/FieldDefinition.cs
	  Mono.Cecil/CustomAttribute.cs
	  Mono.Cecil/TypeDefinition.cs
	  Mono.Cecil/SecurityDeclaration.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/EventDefinition.cs
	  Mono.Cecil/ParameterDefinition.cs
	  Mono.Cecil/PropertyDefinition.cs:
		Implement ICloneable.

	* Mono.Cecil/IAssemblyDefinition.cs:
		Mirror changes on asm kind.
	* Mono.Cecil/StructureReader.cs:
		Fix asm kind detection.

	* Mono.Cecil/StructureWriter.cs
	  Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/ReflectionWriter.cs:
		Fix regressions.
	* Mono.Cecil.Cil/MethodBody.cs:
		Fix method cloning.

	* CodeGen/templates/MetadataTableReader.cs
	  Mono.Cecil.Metadata/MetadataTableReader.cs
	  Mono.Cecil.Metadata/MetadataReader.cs:
		Add helpers for reading.

	* Mono.Cecil/ReflectionReader.cs
	  Mono.Cecil/MethodDefinition.cs
	  Mono.Cecil/AggressiveReflectionReader.cs