@@ -671,7 +671,9 @@
 		<collection type="ExceptionHandler" container="MethodBody" visit="ICode" indexed="true" target="Mono.Cecil.Cil" />
 		<collection type="VariableDefinition" container="MethodBody" visit="ICode" indexed="true" target="Mono.Cecil.Cil" />
 		<collection type="ArrayDimension" container="ArrayType" target="Mono.Cecil" indexed="true" />
+		<!-- modified behaviour
 		<collection type="SecurityDeclaration" container="IHasSecurity" usecontainerinterface="true" target="Mono.Cecil" indexed="true" visit="IReflection" />
+		-->
 		<collection type="CustomAttribute" container="ICustomAttributeProvider" usecontainerinterface="true" target="Mono.Cecil" indexed="true" visit="IReflection" />
 		<collection type="TypeReference" container="ModuleDefinition" target="Mono.Cecil" visit="IReflection" name="ExternType" />
 		<collection type="TypeDefinition" container="TypeDefinition" target="Mono.Cecil" visit="IReflection" name="NestedType" indexed="true" />
