@@ -4,9 +4,6 @@
 // Author:
 //   Jb Evain (jbevain@gmail.com)
 //
-// Generated by /CodeGen/cecil-gen.rb do not edit
-// Thu Sep 29 22:11:55 CEST 2005
-//
 // (C) 2005 Jb Evain
 //
 // Permission is hereby granted, free of charge, to any person obtaining
